--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  pbp_django_auth: ^0.4.0
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  http: ^1.1.0
+  pbp_django_auth: ^0.4.0
 
 dev_dependencies:
   flutter_test:
