--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   pbp_django_auth: ^0.4.0
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
