--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.0
   pbp_django_auth: ^0.4.0
   lazy_load_scrollview: ^1.3.0
+  email_validator: '^2.1.16'
 
 dev_dependencies:
   flutter_test:
