--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Generate Java keystore
         env:
           KEY_JKS: ${{ secrets.KEY_JKS }}
-        run: echo "$KEY_JKS" | base64 --decode > release-keystore.jks
+        run: echo "$KEY_JKS" | base64 --decode > pbp-release-keystore.jks
 
       - name: Build APK
         env:
