--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0+2
 
 environment:
   sdk: ">=3.0.5 <4.0.0"
@@ -39,7 +39,7 @@ dependencies:
   http: ^1.1.0
   pbp_django_auth: ^0.4.0
   lazy_load_scrollview: ^1.3.0
-  email_validator: '^2.1.16'
+  email_validator: "^2.1.16"
 
 dev_dependencies:
   flutter_test:
