--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   http: ^1.1.0
   pbp_django_auth: ^0.4.0
   lazy_load_scrollview: ^1.3.0
-  email_validator: "^2.1.16"
+  flutter_rating_bar: ^4.0.1
+  intl: ^0.19.0
+  email_validator: '^2.1.16'
 
 dev_dependencies:
   flutter_test:
