--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "bookpals_mobile" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "bookpals_mobile" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.pbp. All rights reserved." "\0"
             VALUE "OriginalFilename", "bookpals_mobile.exe" "\0"
             VALUE "ProductName", "bookpals_mobile" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
