--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
   email_validator: "^2.1.16"
+  image_picker: ^1.0.5
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
