--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+5
+version: 1.3.0+6
 
 environment:
   sdk: ">=3.0.5 <4.0.0"
@@ -42,6 +42,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
   email_validator: "^2.1.16"
+  image_picker: ^1.0.5
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
